--- a/slider/templates/parameters.html
+++ b/slider/templates/parameters.html
@@ -1,5 +1,34 @@
-<div ng-repeat="sequence in data.sequences">
-    <div ng-repeat="master in sequence.masters">
-        <div ng-if="master.edit">{{master.name}}</div>
+<div class="inspector-header">
+    <arrow class="open"></arrow>
+    <span>{{data.projectName}}</span>
+</div>
+<div class="inspector-branche" style="display: block" ng-repeat="sequence in data.sequences">
+    <div class="inspector-header">
+        <arrow></arrow>
+        <span>{{sequence.name}}</span>
+    </div>
+    <div class="inspector-branche" ng-repeat="master in sequence.masters">
+        <div class="inspector-header">
+            <arrow ng-if="master.edit"></arrow>
+            <span ng-class="{'inspector-inactive' : !master.edit}">{{master.name}}</span>
+        </div>
+        <div class="inspector-branche" ng-repeat="glyph in data.glyphs" ng-if="master.edit">
+            <div class="inspector-header">
+                <arrow></arrow>
+                <span>{{glyph}}</span>
+            </div>
+            <div class="inspector-branche" ng-repeat="stroke in data.strokes">
+                <div class="inspector-header">
+                    <arrow></arrow>
+                    <span>{{stroke}}</span>
+                </div>
+                <div class="inspector-branche" ng-repeat="point in data.points">
+                    <div class="inspector-header">
+                        <arrow></arrow>
+                        <span>{{point}}</span>
+                    </div>
+                </div>    
+            </div>
+        </div>
     </div>
 </div>
