--- a/slider/templates/fontmapping.html
+++ b/slider/templates/fontmapping.html
@@ -1,26 +1,14 @@
 <b>Font Mapping</b>
 <br>
 <br>
-<div class="mapping-a">
-    Thin
+
+<div ng-repeat="sequence in data.sequences">
+    <div ng-repeat="master in sequence.masters">
+        <div class="mapping" ng-click="master.mapping = !master.mapping" ng-class="{'selected' : master.mapping}">
+            {{master.name}}
+        </div>
+    </div>
 </div>
-<div class="mapping-b">
-    Extra Light
-</div>
-<div class="mapping-a">
-    Light
-</div>
-<div class="mapping-b">
-    Regular
-</div>
-<div class="mapping-a">
-    Medium
-</div>
-<div class="mapping-b">
-    Semi Bold
-</div>
-<div class="mapping-a">
-    Bold
-</div>
+
 
 <input id="font-mapping-export" type="submit" value="Export">
