moved label for explore space masters a little bit
so it isnt in the way while dragging

--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -697,6 +697,10 @@
                     font-size: 9px;
                 }
                 
+                .label-center {
+                    
+                }
+                
                 .triangle-button {
                     position: absolute;
                     bottom: 10px;
