--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -701,6 +701,10 @@
                     
                 }
                 
+                .label-right {
+                    text-align: right;
+                }
+                
                 .triangle-button {
                     position: absolute;
                     bottom: 10px;
